--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,6 +3,54 @@ body {
 	padding: 0;
 }
 
+.header {
+	color: #fff;
+	background-color: rgb(161, 36, 58);
+	width: 100%;
+	text-align: center;
+	height: 200px;
+}
+
+.header h1 {
+	font-family: 'El Rio Lobo';
+	padding-top:  50px; 
+	color: rgb(232, 168, 62);
+	padding-bottom: 0;
+	margin-bottom: 0;
+}
+.header p {
+	margin: 0;
+}
 .content {
 	text-align: center;
+}
+
+.section1 {
+	background: rgb(21, 138, 190);
+}
+.section1 img {
+	margin: 50px;
+}
+
+.section2 {
+	background: url('../images/cuzco2.jpg') no-repeat;
+	background-size: 100%;
+	height: 400px;
+	color: #fff;
+}
+.section2 p {
+	text-align: right;
+}
+.section2 h2{
+	margin: 0;
+	color: rgb(232, 168, 62);
+}
+
+.section3 {
+	font-family: 'El Rio Lobo';
+	padding: 30px;
+}
+
+.section3 {
+	font-size: 50px
 }
